# reelAI

./: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  NEXT_SESSION.md  PHASES_2_3_4.md  README.md  RESEARCH.md  audit_after_A.csv  audit_after_A.end  audit_after_A.start  audit_after_A1.csv  audit_after_A1_summary.md  audit_after_A3.csv  audit_after_A3_partial.csv  audit_after_A3_partial_summary.md  audit_after_A3_summary.md  audit_after_A3_v2.csv  audit_after_A3_v2_summary.md  audit_after_A_summary.md  audit_after_PR5.end  audit_after_PR5.start  audit_after_PR5_summary.md  audit_after_PR7i.csv  audit_after_PR7i_summary.md  audit_baseline.csv  audit_baseline_9.csv  audit_baseline_9_summary.md  audit_baseline_summary.md  audit_boundary_a1_first9.csv  audit_boundary_a1_first9_fallback.csv  audit_boundary_a1_first9_fallback_summary.md  audit_boundary_a1_first9_rerun.csv  audit_boundary_a1_first9_rerun_summary.md  audit_boundary_a1_first9_summary.md  audit_boundary_a2_first9_full.csv  audit_boundary_a2_first9_full_summary.md  audit_boundary_a3_first9_startonly.csv  audit_boundary_a3_first9_startonly_summary.md  (+22 more)
.backup/: backend-cards-cut-scene-2026-07-03.tgz  backend-post-cross-stage-pipelining-2026-07-03.tgz  backend-post-latency-parallelize-2026-07-03.tgz  backend-pre-cross-stage-pipelining-2026-07-03.tgz  backend-pre-latency-2026-07-03.tgz  backend-pre-wave1-2026-07-02.tgz  backend-pre-wave25-2026-07-02.tgz  feed.js.cards-cut-2026-07-03.bak  orchestrator.py.pre-timing-2026-07-03  post-wave34-sprintA-2026-07-03.tgz  pre-w25G-review-2026-07-03.tgz  (+2 more)
(+534 files in other folders)
