[project]
name = "studyreels-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.10.1",
  "requests==2.32.3",
  "youtube-transcript-api==1.2.4",
  "openai==1.66.3",
  "numpy==2.3.3",
  "faiss-cpu==1.13.2",
  "python-docx==1.1.2",
  "pypdf==5.3.1",
  "boto3==1.37.1",
  "python-dateutil==2.9.0.post0",
]
